2003-02-21  Oliver Kiddle  <opk@zsh.org>

	* 18269: Completion/Unix/Command/_sccs: improve file completion
	to handle both direct and indirect references to s. files

2003-02-20  Oliver Kiddle  <opk@zsh.org>

	* 18263: Src/glob.c: fix saving of glob state so that globs can
	be used from the (e) glob qualifier

2003-02-19  Oliver Kiddle  <opk@zsh.org>

	* 18262: Completion/Base/Utility/_multi_parts: fix bug where only
	the first match was added with expand style set to suffix

2003-02-18  Oliver Kiddle  <opk@zsh.org>

	* 18257: Completion/Unix/Command/_xmlsoft,
	Completion/Unix/Command/_xmllint, Completion/Unix/Command/_xsltproc:
	merge _xmllint and _xsltproc into _xmlsoft

	* Doug Kearns: 18259: Completion/Unix/Command/_webbrowser,
	Completion/Unix/Type/_urls: added more browsers and correct
	'urls' description to 'url'

	* 18257: Completion/Unix/Command/_xmllint: make use of _webbrowser

	* Doug Kearns: 18254: Completion/Unix/Command/_xmllint: new
	completion for xmllint (from xmlsoft.org's libxml2 library)

2003-02-17  Peter Stephenson  <pws@csr.com>

	* 18252: Src/input.c, Src/loop.c, Src/zsh.h, Src/Zle/zle_main.c:
	pass ignoreeof settings as flag to zle_main.c, only use option
	in input.c.

	* 18251: Src/parse.c, Src/loop.c: 15030 broke `select' a year
	and a half ago and no-one noticed till now; also make `select'
	return on an EOF without complaining.

2003-02-17  Oliver Kiddle  <opk@zsh.org>

	* 18249: Completion/Linux/Command/_uml: new completion function
	for User Mode Linux

	* Doug Kearns: 18246: Completion/Unix/Command/_elinks,
	Completion/Unix/Command/_ant, Completion/Unix/Command/_java:
	minor update to _elinks and a couple of trivial fixes for java/ant

	* 18242: Src/builtin.c, Completion/Zsh/Command/_read,
	Doc/Zsh/builtins.yo: add -d option to read for specifying
	delimiter to terminate input instead of newline

2003-02-14  Peter Stephenson  <pws@csr.com>

	* 18243: Src/Zle/zle_main.c: On Solaris, poll the tty for
	typeahead before selecting.
